# ProjetoETL

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
src/drivers/: html_collector.py  html_collector_test.py  http_requester.py  http_requester_test.py
src/drivers/interfaces/: html_collector.py  http_requester.py
src/drivers/mocks/: http_resquester_mock.py
src/drivers/tests/: html_collector.py  http_requester.py
src/errors/: transform_error.py
src/infra/: database_connector.py  database_connector_test.py  database_repository.py  database_repository_test.py
src/main/: main_pipeline.py
src/stages/contracts/mocks/: extract_contract.py  transform_contract.py
src/stages/extract/: extract_html.py  extract_html_test.py
src/stages/load/: load_data.py  load_data_test.py
src/stages/transform/: transform_raw_data.py  transform_raw_data_test.py
