[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.4"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
