[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.4"
pre-commit = "^3.3.3"
requests = "^2.31.0"
pytest = "^7.4.0"
requests-mock = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
